# text-segment-audio

./: .gitignore  CMakeLists.txt  ConvertToMP3.ps1  README.md  build.ps1  tts_paragraph_segment.c
include/: app_config.h  common.h  fs_utils.h  sapi_tts.h  segment_builder.h  worker_pool.h
src/: app_config.c  common.c  fs_utils.c  main.c  sapi_tts.c  segment_builder.c  worker_pool.c
